@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 017cb5900a643ae5c0d9a57fa2f62eaef2ae6514 ChangeLog
+SHA1 0c770ca4959bad9f61431d8155a013d90098adf9 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 69c58ebd1d29bee1620bfa1a942d33b306696b7b META.yml
-SHA1 de3b03eee053be0b38f819d40af56136dd0837b3 MYMETA.json
-SHA1 626b7c32a3720ee7b72eaeaeb62ec03ea2f9ef70 MYMETA.yml
-SHA1 4007ff2072887137f841fbc6e489a7b78884fa89 Makefile.PL
+SHA1 e0421bec9c7b2c3d92807878a872c90570028b12 META.yml
+SHA1 9ed67cd441e4c7c921b78c882d420c379c9e3232 MYMETA.json
+SHA1 126845ee52d351e5900172dcfa8d8dcf64ff4507 MYMETA.yml
+SHA1 d453d7952562a9a25db6f4000aa353845d660ee5 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 c8de2b8f973a86621d781aad23632b18a75e50ea lib/Net/FullAuto.pm
+SHA1 fffc3978a0115f2cd94eae2fe5562804fc3c1bc2 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSmBSpAAoJEBa/9Pad787E7IYIAMUUcxyfNsY+6aA9wNbYDqvS
-ANCtjgd1168OxdE5gCkqHQlbgr7d8ymfaGXtxImQRbPYCdvoyljXW4RZ+J0OR6uT
-6rVFirkaH9ZTTWpmwfbWKqazLMFiWLl0VzCw/fAVqmr7nHEBcE3Wg5gxfrOotz86
-GZlIsIMuy5o//cqu43ZCyr+5ctXFs/XQxZQgkpeXo2lDZbM/6ElHyLmESL4CMl/E
-TjPMUTik1EZVhaelh5SxlBe6cD1fOlPKcc52wuxYBDLUPsKU+X0dUpNFPP//BM3W
-FsWmVY1AxSwLMtZqoM16G989oUZdXqx9P2/V//MFZXOpXf7DoD3S7J/TZhT0FdQ=
-=h8rL
+iQEcBAEBAgAGBQJSmJXhAAoJEBa/9Pad787EuqkH/024NvLP08xJxi5e8B1PbRJa
+YNyCbP0Na2C2ovo8cfK3//8aEMCUEu8yuN/qlecQuu/+xjmG77Uh/cFzrBizUUf5
+YNVMGo0rYMewH89zYQawszykCwQ8jrCbiArtvBkqXrFwvBQ/n+gTZNeCccnDtMB0
+k3ccJYJk70dweSPT4rCKxBdZZGNMvOc0MW7IhIGHregYllAvQp5ga6JiaaJlalKb
+Bn8ertk9kzXfqugMx3iKQm8QFKklTmJmgdtIG9oFRrjzt6+/ShEhaom8myVi2doN
+WrnkUsbUtqFmz+39vadOXJOwO+YxFh6jTO2vENinVV6WuY3X/BmLEgMsDxvOVvY=
+=9Yfm
 -----END PGP SIGNATURE-----
