@@ -19,6 +19,14 @@
 ################################################################
 
 
+2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999950 released.
+
+        * Added Module::CoreList, Module::Load, Module::Metadata
+          and version to prerequisites in Makefile.PL
+
+
 2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999949 released.
